--- a/componenti.css
+++ b/componenti.css
@@ -231,11 +231,10 @@ body{
     justify-content: center;
     align-items: center;
     height: 4.5rem;
-    width: 16%;
+    width: 13%;
 }
 .nav-bar__logo-container img{
     width: 100%;
-    height: 100px;
 }
 .nav-bar__linkage{
     width: 68%;
@@ -261,12 +260,12 @@ body{
     color: var(--tittle1);
     font-size: 18px;
     text-decoration: none;
-    transition: transform 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 .linkage-container li a:hover{
     cursor: pointer;
+    font-weight: bold;
     color: var(--tittle2);
-    transform: scale(1.05);
 }
 .linkage-container li img{
     width: 20px;
@@ -283,7 +282,7 @@ body{
 .nav-bar__other-link a{
     margin-top: 0.5rem;
     text-decoration: none;
-    transition: transform 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 .info-link{
     max-width: 7.2rem;
@@ -291,11 +290,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: bold;
 }
 .info-link:hover{
     color: var(--tittle2);
-    transform: scale(1.05);
+    font-weight: bold;
 }
 .info-link img{
     width: 20px;
@@ -348,6 +346,7 @@ body{
     z-index: 1;
     height: 3rem;
     width: 15rem;
+    transition: all 0.2s ease-in-out;
 }
 .button-style::before{
     content: '';
@@ -402,6 +401,7 @@ body{
     position: relative;
     z-index: 1;
     height: 3rem;
+    transition: all 0.2s ease-in-out;
 }
 .button-style-active::before{
     content: '';
