--- a/url/BioVitalAgeClock/BioVitalAgeClock.css
+++ b/url/BioVitalAgeClock/BioVitalAgeClock.css
@@ -227,6 +227,7 @@ video{
     background-color: rgba(176, 184, 193, 0.2);
     border-radius: 4px;
     width: 29rem;
+    height: 26rem;
 }
 .img-container-etaBiologica{
     background-color: rgba(42, 196, 221,0.05);
@@ -309,7 +310,7 @@ video{
 .btn-container-carousel,
 .btn-container-carousel-2{
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     gap: 15px;
 }
@@ -343,6 +344,25 @@ video{
     overflow-x: scroll; 
     padding-bottom: 20px;
     width: 100%;
+}
+#btn-left,
+#btn-right {
+    height: 2.5rem;
+    width: 2.5rem;
+    border: none;
+    border-radius: 50%;
+    background-color: var(--contrast-color);
+    color: var(--tittle1);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease;
+}
+
+#btn-left:hover,
+#btn-right:hover {
+    background-color: var(--contrast-color2);
 }
 .card-carousel-container::-webkit-scrollbar {
     height: 0.6rem; 
@@ -380,6 +400,13 @@ video{
     width: 100%;
     padding: 20px;
 }
+#carousel-description {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .card-carousel-description .marcatore{
     padding-top: 20px;
     padding-bottom: 10px;
@@ -405,6 +432,9 @@ video{
     height: 3rem;
     margin-top: 1rem;
     width: 16rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #teraphy{
     margin-bottom: 2rem;
