--- a/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.css
+++ b/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.css
@@ -86,6 +86,9 @@ span{
 #percorsi{
     height: 3rem;
     width: 15rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .integrazioneAi-description{
     display: flex;
@@ -197,7 +200,8 @@ span{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start
+    align-items: flex-start;
+    transition: all 0.2s cubic-bezier(.215, .61, .355, 1);
 }
 .cards h3{
     text-align: left;
