--- a/url/Innovation/innovation.css
+++ b/url/Innovation/innovation.css
@@ -55,6 +55,7 @@ body{
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
+    transition: all 0.2s ease-in-out;
 }
 .Home_Section-tittle h3{
     margin-top: 5rem;
