--- a/includes/components/NavBar/navbar.html
+++ b/includes/components/NavBar/navbar.html
@@ -33,7 +33,7 @@
         <ul class="linkage-container">
             <li><a href="/BioVitalyAge-Website/index.html">Home Page</a> </li>
             <li><a href="/BioVitalyAge-Website/url/BioVitalAgeClock/BioVitalAgeClock.html">BioVitalAge Clock</a></li>
-            <li><a href="/BioVitalyAge-Website/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a></li>
+            <!-- <li><a href="/BioVitalyAge-Website/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a></li> -->
             <li><a href="/BioVitalyAge-Website/url/Innovation/innovation.html">Innovazione</a></li>
             <li><a href="/BioVitalyAge-Website/url/Industries/industries.html">Industrie</a></li>
             <li><a href="/BioVitalyAge-Website/url/Corporation/corporation.html">Società</a></li>
