--- a/url/BioVitalAgeClock/BioVitalAgeClock.css
+++ b/url/BioVitalAgeClock/BioVitalAgeClock.css
@@ -29,6 +29,24 @@ body{
     overflow-x: hidden;
     position: relative;
 }
+
+
+* h3{
+    font-family: "Raleway", sans-serif;
+    font-size: 35px;
+    font-weight: 400;
+    color: var(--tittle2);
+    text-align: center;
+    letter-spacing: 1px;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+* h3.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
 ::-webkit-scrollbar{
     width: 0px;
 }
@@ -65,7 +83,6 @@ body{
     font-weight: 700;
     text-align: center;
     max-width: 40%;
-    opacity: 0;
     z-index: 3;
 } 
 
@@ -85,7 +102,6 @@ body{
     font-weight: 400;
     text-align: left;
     padding-bottom: 20px;
-    opacity: 0;
 }
 
 .home_presentation-description h3 span,
@@ -104,7 +120,6 @@ body{
     font-weight: 400;
     text-align: left;
     padding-bottom: 10px;
-    opacity: 0;
 }
 
 
