Fix mediaquery & change text

--- a/componenti.css
+++ b/componenti.css
@@ -1,7 +1,65 @@
+/* ! Reset */
 *{
     margin: 0;
     padding: 0;
-    font-family: "Quicksand", sans-serif;;
+    font-family: "Quicksand", sans-serif;
+    transition: all 0.2s ease-in-out;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+ol,
+ul {
+    list-style-type: none;
+}
+
+img {
+    height: auto;
+}
+
+h1 {
+    font-size: 4rem;
+}
+
+h2 {
+    font-size: 3rem;
+}
+
+h3 {
+    font-size: 2rem;
+}
+
+h4 {
+    font-size: 1rem;
+}
+
+h5 {
+    font-size: 0.8rem;
+}
+
+h6 {
+    font-size: 0.6rem;
+}
+
+a {
+    text-decoration: none
 }
 
 :root{
