Bug/Fix Footer responsive

--- a/includes/components/Footer/footer.html
+++ b/includes/components/Footer/footer.html
@@ -59,9 +59,24 @@
             <div class="col-12 col-md-3 col-lg-3 col-xxl-2 p-2 widget-contatti">
                 <h3>Contattaci</h3>
                 <ul>
-                    <li><img src="/BioVitalyAge-Website/includes/images/icone/email.png" alt="" width="30px" height="30px"><p>info@gmail.com</p></li>
-                    <li><img src="/BioVitalyAge-Website/includes/images/icone/telefono.png" alt="" width="30px" height="30px"><p>(095) 6173922</p></li>
-                    <li><img src="/BioVitalyAge-Website/includes/images/icone/posizione.png" alt="" width="30px" height="30px"><p>Nome Azienda, via dell'azienda, cap, città (IT)</p></li>
+                    <li>
+                        <div class="container-icon-footer">
+                            <img src="/BioVitalyAge-Website/includes/images/icone/email.png" alt="Email Icon">
+                        </div>
+                        <p>info@gmail.com</p>
+                    </li>
+                    <li>
+                        <div class="container-icon-footer">
+                            <img src="/BioVitalyAge-Website/includes/images/icone/telefono.png" alt="Phone Icon">
+                        </div>
+                        <p>(095) 6173922</p>
+                    </li>
+                    <li>
+                        <div class="container-icon-footer">
+                            <img src="/BioVitalyAge-Website/includes/images/icone/posizione.png" alt="Location Icon">
+                        </div>
+                        <p>Nome Azienda, via dell'azienda, cap, città (IT)</p>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -77,7 +92,7 @@
                 <a href="">Privacy policy</a>
             </div>
         </div>
-    </div>           
+    </div>
 </footer>
 
 <script>
