--- a/componenti.css
+++ b/componenti.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     font-family: "Quicksand", sans-serif;
-    transition: all 0.2s ease-in-out;
 }
 
 *,
@@ -547,7 +546,6 @@ body{
 /* Footer */
 footer{
     background-color: rgba(0,0,0,0.8);
-    height: 34rem;
 }
 .footer-header-container{
     padding: 0px 50px 0px 50px;
@@ -646,26 +644,33 @@ footer{
     width: 100%;
 }
 .footer-copryright-container{
-    width: 72%;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
     height: 100%;
     margin: auto;
 }
 .footer-copryright p{
-    padding-top: 15px;
-    width: 30rem;
     height: 100%;
     display: flex;
     justify-content: flex-start;
     gap: 5px;
     align-items: center;
+    margin-bottom: 0;
 }
 .link-copyright{
-    width: 20rem;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     gap: 20px;
     height: 100%;
+}
+.container-icon-footer{
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .link-copyright a{
     color: var(--tittle1);
@@ -789,9 +794,6 @@ footer{
 
 
     /* Footer */
-    footer{
-        height: 62rem;
-    }
     .footer-header-container{
         padding: 0;
         height: 95%;
@@ -830,6 +832,12 @@ footer{
     .widget-contatti{
         margin-top: 0rem;
     }
+
+    .widget-link h3,
+    .widget-contatti h3{
+        margin-bottom: 2.5rem;
+    }
+
     .widget-link h3,
     .widget-contatti h3{
         padding-left: 12px;
@@ -848,15 +856,15 @@ footer{
         height: 25px;
     }
     .footer-copryright{
-        height: 3rem;
+        height: max-content;
         width: 100%;
     }
     .footer-copryright-container{
         width: 100%;
-        padding: 24px;
-    }
-    .link-copyright{
-        display: none;
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .social-container{
