--- a/componenti.css
+++ b/componenti.css
@@ -611,10 +611,9 @@ footer{
 }
 .widget-link ul li,
 .widget-contatti ul li{
-    margin-top: 1.3rem;
+    margin-top: 2rem;
     margin-left: -1.5rem;
     list-style: none;
-    padding: 5px;
 }
 .widget-link ul li a{
     text-decoration: none;
@@ -625,15 +624,21 @@ footer{
 .widget-link ul li a:hover{
     color: var(--contrast-color2);
 }
+.widget-link ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
 .widget-contatti li{
     color: var(--tittle1);
     display: flex;
+    align-items: start;
     gap: 10px;
     letter-spacing: 1px;
 
 }
-.widget-contatti li p{
-    padding: 5px;
+.widget-contatti ul{
+    margin-top: 2.2rem;
 }
 .widget-contatti ul li p:last-of-type{
     max-width: 75%;
@@ -666,11 +671,20 @@ footer{
     height: 100%;
 }
 .container-icon-footer{
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.container-icon-footer img{
+    width: 100%;
+    height: 100%;
+    transition: all 0.2s ease-in-out;
+}
+.container-icon-footer p{
+    margin-top: 0;
 }
 .link-copyright a{
     color: var(--tittle1);
