--- a/includes/components/NavBar/navbar.html
+++ b/includes/components/NavBar/navbar.html
@@ -32,7 +32,7 @@
     <div class="nav-bar__linkage">
         <ul class="linkage-container">
             <li><a href="/BioVitalyAge-Website/index.html">Home Page</a> </li>
-            <li><a href="/BioVitalyAge-Website/url/BioVitalAgeClock/BioVitalAgeClock.html">BioVitalAge Clock</a></li>
+            <li><a href="/BioVitalyAge-Website/url/BioVitalAgeClock/BioVitalAgeClock.html">BioVitalAge Clock</a><img src="/BioVitalyAge-Website/includes/images/icone/navBarArrow.png" alt="Freccia Giù" style="margin-left: 5px;"></li>
             <!-- <li><a href="/BioVitalyAge-Website/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a></li> -->
             <li><a href="/BioVitalyAge-Website/url/Innovation/innovation.html">Innovazione</a></li>
             <li><a href="/BioVitalyAge-Website/url/Industries/industries.html">Industrie</a></li>
