--- a/includes/components/NavBar/navbar.html
+++ b/includes/components/NavBar/navbar.html
@@ -1,18 +1,43 @@
 <div class="MobileNavBar-backdrop">
     <ul class="linkage-containerMobile">
         <li><a href="/BioVitalyAge-Website/index.html">Home Page</a></li>
-        <li><a href="/BioVitalyAge-Website/url/BioVitalAgeClock/BioVitalAgeClock.html">BioVitalAge Clock</a></li>
+        <li>
+            <div class="d-flex">
+                <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/BioVitalAgeClock.html">
+                  BioVitalAge Clock
+                </a>
+                <img class="has-dropdown-clock-mobile" src="/BioVitalyAge-Website/includes/images/icone/navBarArrow.png" alt="Freccia Giù" style="margin-left: 5px;" width="18" height="18">
+            </div>
+            <div class="dropdown-menu-clock-mobile">
+              <div class="dropdown-section">
+                <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione1.html">Sezione 1</a>
+              </div>
+              <div class="dropdown-section">
+                <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione2.html">Sezione 2</a>
+              </div>
+              <div class="dropdown-section">
+                <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione3.html">Sezione 3</a>
+              </div>
+              <div class="dropdown-section">
+                <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione4.html">Sezione 4</a>
+              </div>
+            </div>
+        </li>
         <li><a href="/BioVitalyAge-Website/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a></li>
         <li><a href="/BioVitalyAge-Website/url/Innovation/innovation.html">Innovazione</a></li>
         <li><a href="/BioVitalyAge-Website/url/Industries/industries.html">Industrie</a></li>
         <li><a href="/BioVitalyAge-Website/url/Corporation/corporation.html">Società</a></li>
-        <li><a href="/BioVitalyAge-Website/url/contattaci/contattaci.html">Contattaci</a></li>  
+        <li><a href="/BioVitalyAge-Website/url/contattaci/contattaci.html">Contattaci</a></li>
+        <div class="line-divisor"></div>
+        <li><a href="http://biovitalageplatformdeployed-env.eba-exhbgdpt.us-east-1.elasticbeanstalk.com/">Accedi</a></li>
     </ul>
 </div>
 
 <nav class="nav-bar-mobile" id="navBarMobile">
     <div class="nav-barMobile__logo-container">
-        <img src="/BioVitalyAge-Website/includes/images/Logo.png" alt="BioVitalAge Logo">
+        <a href="/BioVitalyAge-Website/index.html">
+            <img src="/BioVitalyAge-Website/includes/images/Logo.png" alt="BioVitalAge Logo">
+        </a>
     </div>
 </nav>
 
@@ -32,7 +57,26 @@
     <div class="nav-bar__linkage">
         <ul class="linkage-container">
             <li><a href="/BioVitalyAge-Website/index.html">Home Page</a> </li>
-            <li><a href="/BioVitalyAge-Website/url/BioVitalAgeClock/BioVitalAgeClock.html">BioVitalAge Clock</a><img src="/BioVitalyAge-Website/includes/images/icone/navBarArrow.png" alt="Freccia Giù" style="margin-left: 5px;"></li>
+            <li class="has-dropdown-clock">
+                <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/BioVitalAgeClock.html">
+                  BioVitalAge Clock
+                  <img src="/BioVitalyAge-Website/includes/images/icone/navBarArrow.png" alt="Freccia Giù" style="margin-left: 5px;">
+                </a>
+                <div class="dropdown-menu-clock">
+                  <div class="dropdown-section">
+                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione1.html">Sezione 1</a>
+                  </div>
+                  <div class="dropdown-section">
+                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione2.html">Sezione 2</a>
+                  </div>
+                  <div class="dropdown-section">
+                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione3.html">Sezione 3</a>
+                  </div>
+                  <div class="dropdown-section">
+                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione4.html">Sezione 4</a>
+                  </div>
+                </div>
+            </li>            
             <!-- <li><a href="/BioVitalyAge-Website/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a></li> -->
             <li><a href="/BioVitalyAge-Website/url/Innovation/innovation.html">Innovazione</a></li>
             <li><a href="/BioVitalyAge-Website/url/Industries/industries.html">Industrie</a></li>
@@ -46,3 +90,7 @@
         <a href="http://biovitalageplatformdeployed-env.eba-exhbgdpt.us-east-1.elasticbeanstalk.com/" class="button" style="text-align: center;">Accedi</a>
     </div>
 </nav>
+
+<script>
+
+</script>
