--- a/style.css
+++ b/style.css
@@ -644,6 +644,7 @@ video{
     }
     .grid-container{
         width: 100%;
+        height: 20rem;
     }
     .grid-container h3{
         font-size: 20px;
