--- a/includes/components/Footer/footer.html
+++ b/includes/components/Footer/footer.html
@@ -13,16 +13,16 @@
                 <div class="col-md-10 col-lg-12 col-xxl-10 p-2 social-container d-flex">
                 
                         <div class="col-md-2 p-1 facebook">
-                            <a href="#"><img src="/BioVitalyAge-Website/includes/images/icone/facebook.png" alt="" ></a>
+                            <a href="#"><img src="/BioVitalyAge-Website/includes/images/icone/facebook.png" alt="facebook icon" title="Facebook" ></a>
                         </div>
                         <div class="col-md-2 p-1 instagram">
-                            <a href="#"><img src="/BioVitalyAge-Website/includes/images/icone/instagram.png" alt=""></a>
+                            <a href="#"><img src="/BioVitalyAge-Website/includes/images/icone/instagram.png" alt="instagram icon" title="Instagram"></a>
                         </div>
                         <div class="col-md-2 p-1 linkedin">
-                            <a href="#"><img src="/BioVitalyAge-Website/includes/images/icone/linkedin.png" alt=""></a>
+                            <a href="#"><img src="/BioVitalyAge-Website/includes/images/icone/linkedin.png" alt="linkedin icon" title="Linkedin"></a>
                         </div>
                         <div class="col-md-2 p-1 telegram">
-                            <a href="#"><img src="/BioVitalyAge-Website/includes/images/icone/telegram.png" alt=""></a>
+                            <a href="#"><img src="/BioVitalyAge-Website/includes/images/icone/telegram.png" alt="telegram icon" title="Telegram"></a>
                         </div>
             
                 </div>
