--- a/includes/components/NavBar/navbar.html
+++ b/includes/components/NavBar/navbar.html
@@ -1,6 +1,6 @@
 <div class="MobileNavBar-backdrop">
     <ul class="linkage-containerMobile">
-        <li><a href="/BioVitalyAge-Website/index.html">Home Page</a></li>
+        <li><a href="/BioVitalyAge-Website/homePage.html">Home Page</a></li>
         <li>
             <div class="d-flex">
                 <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/BioVitalAgeClock.html">
@@ -23,11 +23,11 @@
               </div>
             </div>
         </li>
-        <li><a href="/BioVitalyAge-Website/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a></li>
-        <li><a href="/BioVitalyAge-Website/url/Innovation/innovation.html">Innovazione</a></li>
-        <li><a href="/BioVitalyAge-Website/url/Industries/industries.html">Industrie</a></li>
-        <li><a href="/BioVitalyAge-Website/url/Corporation/corporation.html">Società</a></li>
-        <li><a href="/BioVitalyAge-Website/url/contattaci/contattaci.html">Contattaci</a></li>
+        <!-- <li><a href="/BioVitalyAge-Website/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a></li> -->
+        <li><a href="/BioVitalyAge-Website/url/Innovation/innovation.html">La nostra innovazione</a></li>
+        <li><a href="/BioVitalyAge-Website/url/About/about.html">Chi Siamo</a></li>
+        <li><a href="/BioVitalyAge-Website/url/Collaborazioni/collaborazioni.html">Collaborazioni</a></li>
+        <li><a href="/BioVitalyAge-Website/url/Contattaci/contattaci.html">Contattaci</a></li>
         <div class="line-divisor"></div>
         <li><a href="http://biovitalageplatformdeployed-env.eba-exhbgdpt.us-east-1.elasticbeanstalk.com/">Accedi</a></li>
     </ul>
@@ -35,7 +35,7 @@
 
 <nav class="nav-bar-mobile" id="navBarMobile">
     <div class="nav-barMobile__logo-container">
-        <a href="/BioVitalyAge-Website/index.html">
+        <a href="/BioVitalyAge-Website/homePage.html">
             <img src="/BioVitalyAge-Website/includes/images/Logo.png" alt="BioVitalAge Logo">
         </a>
     </div>
@@ -49,14 +49,14 @@
 
 <nav class="nav-bar" id="navbar">
     <div class="nav-bar__logo-container">
-        <a href="/BioVitalyAge-Website/index.html">
+        <a href="/BioVitalyAge-Website/homePage.html">
             <img src="/BioVitalyAge-Website/includes/images/Logo.png" alt="BioVitalAge Logo" title="Home Page">
         </a>
     </div>
 
     <div class="nav-bar__linkage">
         <ul class="linkage-container">
-            <li><a href="/BioVitalyAge-Website/index.html">Home Page</a> </li>
+            <li><a href="/BioVitalyAge-Website/homePage.html">Home Page</a> </li>
             <li class="has-dropdown-clock">
                 <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/BioVitalAgeClock.html">
                   BioVitalAge Clock
@@ -78,14 +78,14 @@
                 </div>
             </li>            
             <!-- <li><a href="/BioVitalyAge-Website/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a></li> -->
-            <li><a href="/BioVitalyAge-Website/url/Innovation/innovation.html">Innovazione</a></li>
-            <li><a href="/BioVitalyAge-Website/url/Industries/industries.html">Industrie</a></li>
-            <li><a href="/BioVitalyAge-Website/url/Corporation/corporation.html">Società</a></li>
+            <li><a href="/BioVitalyAge-Website/url/Innovation/innovation.html">La nostra innovazione</a></li>
+            <li><a href="/BioVitalyAge-Website/url/About/about.html">Chi Siamo</a></li>
+            <li><a href="/BioVitalyAge-Website/url/Collaborazioni/collaborazioni.html">Collaborazioni</a></li>
         </ul>
     </div>
     
     <div class="nav-bar__other-link">
-        <a href="/BioVitalyAge-Website/url/contattaci/contattaci.html" class="info-link">Contattaci</a>
+        <a href="/BioVitalyAge-Website/url/Contattaci/contattaci.html" class="info-link">Contattaci</a>
 
         <a href="http://biovitalageplatformdeployed-env.eba-exhbgdpt.us-east-1.elasticbeanstalk.com/" class="button" style="text-align: center;">Accedi</a>
     </div>
