Add subsection into clock section

--- a/includes/components/NavBar/navbar.html
+++ b/includes/components/NavBar/navbar.html
@@ -64,16 +64,16 @@
                 </a>
                 <div class="dropdown-menu-clock">
                   <div class="dropdown-section">
-                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione1.html">Sezione 1</a>
+                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/subcategory/EtàBiologica/EtaBiologica.html">Età Biologica</a>
                   </div>
                   <div class="dropdown-section">
-                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione2.html">Sezione 2</a>
+                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/subcategory/CapacitàVitale/CapacitàVitale.html">Capacità Vitale</a>
                   </div>
                   <div class="dropdown-section">
-                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione3.html">Sezione 3</a>
+                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/subcategory/Resilienza/Resilienza.html">Resilienza</a>
                   </div>
                   <div class="dropdown-section">
-                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/sezione4.html">Sezione 4</a>
+                    <a href="/BioVitalyAge-Website/url/BioVitalAgeClock/subcategory/EtàMetabolica/EtaMetabolica.html">Età Metabolica</a>
                   </div>
                 </div>
             </li>            
