--- a/url/BioVitalAgeClock/subcategory/CapacitàVitale/capacitàVitale.css
+++ b/url/BioVitalAgeClock/subcategory/CapacitàVitale/capacitàVitale.css
@@ -234,34 +234,20 @@ video{
     font-size: 20px;
 }
 .card-container-etaBiologica{
-    display: grid;
-    max-width: 1280px;
-    grid-template-columns: 1fr 1fr;
+    flex-wrap: wrap;
     gap: 20px;
     margin: auto;
 }
 .card-etaBiologica{
     background-color: rgba(176, 184, 193, 0.2);
     border-radius: 4px;
-    height: 29rem;
-    transition: all 0.2s cubic-bezier(.215, .61, .355, 1);
+    width: 29rem;
+    height: 35rem;
 }
-
-.card-etaBiologica:hover{
-    background-color: rgba(176, 184, 193, 0.4);
-}
-
-.card-etaBiologica p{
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 7;
-    overflow: hidden;
-}
-
 .img-container-etaBiologica{
     background-color: rgba(42, 196, 221,0.05);
-    width: 6rem;
-    height: 6rem;
+    width: 4rem;
+    height: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -270,20 +256,14 @@ video{
 }
 .img-container-circle{
     background-color: rgba(42, 196, 221,0.15);
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
     display: flex;
-    overflow: hidden;
     justify-content: center;
     align-items: center;
-    border-radius: 100%;
+    border-radius: 50px;
 }
-
-.img-container-circle img{
-    width: 80%;
-}
-
-.card-container-etaBiologica h2{
+.card-container-etaBiologica p span{
     color: var(--tittle2); 
     font-style: italic;
 }
@@ -529,6 +509,15 @@ video{
     align-items: center;
     border-radius: 50px;
 }
+.img-container-circle{
+    background-color: rgba(42, 196, 221,0.15);
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+}
 
 
 
@@ -620,27 +609,13 @@ iframe{
 
 @media (max-width: 768px) {
   .card-etaBiologica{
-    height: 23rem;
-  }
-
-  .img-container-etaBiologica{
-    width: 4rem;
-    height: 4rem;
-  }
-
-  .img-container-circle{
-    width: 3rem;
-    height: 3rem;
-  }
-
-  .card-container-etaBiologica{
-    grid-template-columns: 1fr;
+    height: 18rem;
   }
 }
 
 @media (max-width: 425px) {
   .card-etaBiologica{
-    height: 20rem;
+    height: 24rem;
   }
 }
 
@@ -960,6 +935,8 @@ iframe{
         font-size: 20px;
     }
     .card-etaBiologica{
+        width: 30%;
+        height: 25rem;
         overflow: scroll;
     }
     .img-container-circle img{
@@ -1063,6 +1040,15 @@ iframe{
 
     .demo-descrizione{
         min-width: 60%;
+    }
+
+
+}
+
+
+@media (min-width: 2560px) {
+    .card-etaBiologica{
+        width: 25.5%;
     }
 }
 
