--- a/url/Collaborazioni/collaborazioni.css
+++ b/url/Collaborazioni/collaborazioni.css
@@ -255,6 +255,10 @@ span{
     filter: blur(2px);
 }
 
+#current-year{
+    color: inherit !important;
+}
+
 
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
@@ -283,8 +287,6 @@ span{
         text-align: left;
     }
     .card-customer{
-        width: 100%;
-        height: 12rem;
         margin-bottom: 0.5rem;
     }
     .container-feedback{
@@ -308,9 +310,6 @@ span{
 
     @media only screen and (min-width: 370px) and (max-width: 480px){
         .card-feedback{
-            height: 18rem;
-        }
-        .card-customer{
             height: 18rem;
         }
     }
@@ -369,7 +368,6 @@ span{
     .card-customer {
         position: relative;
         height: 17.2rem;
-        width: 49%;
         overflow: hidden;
     }
     .feedbeck-container{
